--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="project-slide flex-shrink-0 reveal-element delay-100">
                         <div class="project-card bg-[#161b22] p-6 rounded-xl shadow-2xl">
                             <!-- Distinct Mock Image 1 -->
-                            <img src="../../Img/MAYA1.jpg" alt="">
+                            <img src="Img/MAYA1.jpg" alt="">
                             <h3 class="text-xl font-semibold text-white mb-2"><br>Modeling</h3>
                             <p class="text-gray-400 mb-4 text-sm">Modeling is creating 3D shapes, characters, and environments in Autodesk Maya using tools to build, edit, and refine geometry for animation, games, and films.</p>
                             <div class="flex justify-between items-center">
