--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Navigation Bar -->
  <header class="sticky top-0 z-50 bg-[#0d1117]/95 backdrop-blur-sm shadow-lg">
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-            <a href="#hero" class="text-2xl font-extrabold tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-cyan-400">V M</a>
+            <a href="index.html#hero" class="text-2xl font-extrabold tracking-tight text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-cyan-400">V M</a>
             <div class="space-x-8 hidden md:flex">
                 <a href="index.html#hero" class="nav-link text-xl text-blue-400 font-extrabold transition-nonee">Home</a>
                 <a href="Scripts/See all project/About/About.html" class="nav-link text-gray-300 hover:text-blue-400 transition duration-300">About</a>
