--- a/Scripts/See all project/About/About.html
+++ b/Scripts/See all project/About/About.html
@@ -125,7 +125,7 @@
                 <div class="bg-[#161b22] p-6 rounded-xl shadow-xl border-l-4 border-blue-500">
                     <h3 class="text-2xl font-semibold text-white">B.Sc Animation (Game design and development)</h3>
                     <p class="text-lg text-gray-400">Subbalakshmi Lakshmipathy College of science</p>
-                    <p class="text-sm text-gray-500 mt-2">Graduation: XXXX</p>
+                    <p class="text-sm text-gray-500 mt-2">Graduation: 2027</p>
                     <p class="text-gray-300 mt-4">Focused on Attractive and interactive design. Final year project: XXXX.</p>
                 </div>
                 
