--- a/Scripts/See all project/Experience/Experience.html
+++ b/Scripts/See all project/Experience/Experience.html
@@ -90,7 +90,6 @@
                 </div>
             </div>
 
-            <!-- Job Role 2: Full-Stack Developer (Left side on desktop) -->
             <div class="timeline-item left reveal-element delay-500">
                 <div class="bg-[#161b22] p-6 rounded-xl shadow-2xl transition duration-300 hover:shadow-blue-500/30">
                     <h3 class="text-2xl font-bold text-blue-400">Student Vice President</h3>
@@ -102,15 +101,15 @@
                     <ul class="space-y-3 text-gray-300 text-sm list-none pl-0">
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-teal-400 mr-2 mt-0.5 flex-shrink-0"></i>
-                            Developed responsive user interfaces for $10+$ client projects using **React** and **Tailwind CSS**, focusing on mobile performance.
+                           Serving as the Student Vice President for the Game Design & Development Department, coordinating student initiatives and activities.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-teal-400 mr-2 mt-0.5 flex-shrink-0"></i>
-                            Managed and optimized **PostgreSQL** databases, implementing custom $SQL$ queries that reduced report generation time by **$50$%**.
+                           Leading team projects, organizing events, and improving collaboration between students and faculty.
                         </li>
                         <li class="flex items-start">
                             <i data-lucide="check-circle" class="w-5 h-5 text-teal-400 mr-2 mt-0.5 flex-shrink-0"></i>
-                            Integrated third-party payment gateways ($Stripe$) and complex $REST\text{ APIs}$ for secure financial transactions.
+                           Supporting department-level planning, communication, and community building to enhance the learning environment.
                         </li>
                     </ul>
                 </div>
